[package]
name = "yourmom"
version = "3.0.0"
edition = "2021"
authors = ["viewerofall"]
description = "VQ — Version 3: Quantum. The most cursed programming language in existence."
license = "WTFPL"
repository = "https://github.com/viewerofall/yourmom-lang"

[[bin]]
name = "yourmom"
path = "src/main.rs"

[lib]
name = "yourmom"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
rand = "0.8"
once_cell = "1.19"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
